# Byzantium

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  generate_report.py  openapi.yaml
.github/workflows/: ci.yml
.sqlx/: README
crates/byz-anchor/: Cargo.toml
crates/byz-anchor/src/: bitcoin.rs  immudb.rs  lib.rs
crates/byz-billing/: Cargo.toml
crates/byz-billing/src/: error.rs  lib.rs  metering.rs  stripe.rs
crates/byz-common/: Cargo.toml
crates/byz-common/src/: config.rs  errors.rs  lib.rs  types.rs
crates/byz-crypto/: Cargo.toml
crates/byz-crypto/src/: dilithium.rs  kyber.rs  lib.rs  merkle.rs
crates/byz-gateway/: Cargo.toml
crates/byz-gateway/src/: circuit_breaker.rs  lib.rs  main.rs  metrics.rs  state.rs  tee_client.rs  webhooks.rs
crates/byz-gateway/src/jobs/: anchor_flush.rs  billing_flush.rs  mod.rs  proof_refresh.rs
crates/byz-gateway/src/middleware/: auth.rs  rate_limit.rs  request_id.rs
crates/byz-gateway/src/routes/: a2a.rs  audit.rs  identity.rs  keys.rs  mandate.rs  mod.rs  payments.rs  receipt.rs  trust.rs  usage.rs  x402.rs
crates/byz-gateway/tests/: e2e.rs  integration.rs
crates/byz-identity/: Cargo.toml
crates/byz-identity/src/: credential.rs  did.rs  lib.rs  zkme.rs
crates/byz-mandate/: Cargo.toml
crates/byz-mandate/src/: engine.rs  lib.rs  policy.rs
crates/byz-proof/: Cargo.toml
crates/byz-proof/src/: disclosure.rs  inclusion.rs  lib.rs  threshold.rs
crates/byz-rail-a2a/: Cargo.toml
crates/byz-rail-a2a/src/: error.rs  lib.rs  message.rs  proxy.rs
crates/byz-rail-eip3009/: Cargo.toml
crates/byz-rail-eip3009/src/: authorization.rs  error.rs  lib.rs  verifier.rs
crates/byz-rail-solana/: Cargo.toml
crates/byz-rail-solana/src/: error.rs  lib.rs  transfer.rs  verifier.rs
crates/byz-rail-x402/: Cargo.toml
crates/byz-rail-x402/src/: error.rs  lib.rs  payment.rs  verifier.rs
crates/byz-receipt/: Cargo.toml
crates/byz-receipt/src/: batch.rs  lib.rs  receipt.rs
crates/byz-reputation/: Cargo.toml
crates/byz-reputation/src/: commitment.rs  lib.rs  scorer.rs
crates/byz-sdk/: Cargo.toml
crates/byz-sdk/src/: client.rs  error.rs  lib.rs
crates/byz-store/: Cargo.toml
crates/byz-store/src/: lib.rs
crates/byz-store/src/neo4j/: mod.rs
crates/byz-store/src/postgres/: agent.rs  api_keys.rs  batch.rs  mandate.rs  mod.rs  receipt.rs
crates/byz-store/src/redis_store/: mod.rs
crates/byz-tee/: Cargo.toml
crates/byz-tee/src/: mandate_tee.rs  reputation_tee.rs
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  api.ts  index.css
dashboard/src/components/: Sidebar.tsx  StatCard.tsx  StatusDot.tsx  TopBar.tsx  VerdictBadge.tsx
dashboard/src/pages/: Agents.tsx  ApiKeys.tsx  Billing.tsx  Health.tsx  Overview.tsx  TrustLog.tsx
deploy/k8s/: deployment.yaml  ingress.yaml  secrets.yaml.template  service.yaml
deploy/k8s/backup/: postgres-backup-cronjob.yaml
deploy/k8s/cert-manager/: README.md  certificate.yaml  issuer.yaml
deploy/k8s/sealed-secrets/: README.md
deploy/redis/: docker-compose.redis-ha.yml  redis-sentinel.conf
docs/: billing.md
docs/runbooks/: anchor-stale.md  gateway-down.md  rate-limit-spike.md  trust-check-latency.md
gramine/: build.sh  manifest.mandate.template  manifest.reputation.template
infrastructure/sgx/: Dockerfile.sgx  byz-mandate.manifest.template  byz-reputation.manifest.template  entrypoint.sh
infrastructure/sql/: init.sql
migrations/: 001_initial.down.sql  001_initial.sql  002_reputation.down.sql  002_reputation.sql  003_api_keys.down.sql  003_api_keys.sql
monitoring/: alertmanager.yml  alerts.yml  prometheus.yml  promtail.yml
monitoring/grafana/provisioning/dashboards/: byzantium.json
nginx/: certbot-setup.sh  nginx.conf
programs/: Cargo.toml
programs/disclosure-proof/: Cargo.toml
programs/disclosure-proof/src/: main.rs
programs/threshold-proof/: Cargo.toml
programs/threshold-proof/src/: main.rs
scripts/: backup-restore.sh  run-e2e.sh  seed.sh
sdk/typescript/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: client.ts  index.test.ts  index.ts  middleware.ts  types.ts
tests/: integration_test.rs
tests/e2e/: README.md
tests/load/: README.md  trust_check.js
