[package]
name = "byz-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "byzantium"
path = "src/main.rs"

[lib]
name = "byz_gateway"
path = "src/lib.rs"

[features]
## Enables DB-backed integration test helpers (`start_test_server_with_db`).
## Off by default; activated by the `integration-db` CI job.
integration-db = []

[dev-dependencies]
reqwest = { workspace = true }

[dependencies]
byz-common = { path = "../byz-common" }
byz-crypto = { path = "../byz-crypto" }
byz-identity = { path = "../byz-identity" }
byz-mandate = { path = "../byz-mandate" }
byz-reputation = { path = "../byz-reputation" }
byz-receipt = { path = "../byz-receipt" }
byz-anchor = { path = "../byz-anchor" }
byz-proof = { path = "../byz-proof" }
byz-store = { path = "../byz-store" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
tracing-opentelemetry = { workspace = true }
tonic = { workspace = true }
dotenvy = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
dashmap = { workspace = true }
byz-rail-eip3009 = { path = "../byz-rail-eip3009" }
byz-rail-solana = { path = "../byz-rail-solana" }
byz-rail-x402 = { path = "../byz-rail-x402" }
byz-rail-a2a = { path = "../byz-rail-a2a" }
byz-billing = { path = "../byz-billing" }
sha2 = { workspace = true }
hmac = { workspace = true }
base64 = { workspace = true }
sqlx = { workspace = true }
