[package]
name = "byz-mandate"
version = "0.1.0"
edition = "2021"

[dependencies]
byz-common = { path = "../byz-common" }
byz-crypto = { path = "../byz-crypto" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
