[package]
name = "byz-rail-eip3009"
version = "0.1.0"
edition = "2021"
description = "Byzantium EIP-3009 / Base L2 payment rail — transferWithAuthorization verification"

[dependencies]
byz-common = { path = "../byz-common" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
