[package]
name = "byz-rail-solana"
version = "0.1.0"
edition = "2021"
description = "Byzantium Solana SPL-token payment rail — verify token transfers + trust-check"

[dependencies]
byz-common = { path = "../byz-common" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
