[package]
name = "threshold-proof"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "threshold-proof"
path = "src/main.rs"

[dependencies]
# SP1 zkVM runtime (RISC-V guest target)
sp1-zkvm = "3"
sha2 = { version = "0.10", default-features = false, features = ["force-soft"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[profile.release]
panic = "abort"
